versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/Multiplicity.f03


!! THIS FILE WAS AUTOGENERATED!
!! DO NOT MODIFY!

module generalMultiplicity
use iso_c_binding
interface


!! -----------------------------------------------------------------------------
!! Basics
!! Create, Assign, Delete
!! -----------------------------------------------------------------------------

!! Create, default, const
function MultiplicityDefaultConst() &
      bind(C, name='MultiplicityDefaultConst') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function MultiplicityDefaultConst

!! Create, default
function MultiplicityDefault() &
      bind(C, name='MultiplicityDefault') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function MultiplicityDefault

!! Create, general, const
function MultiplicityCreateConst( &
   constant1d, &
   XYs1d, &
   regions1d, &
   polynomial1d, &
   reference, &
   branching1d, &
   branching3d, &
   unspecified &
) &
      bind(C, name='MultiplicityCreateConst') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: constant1d
   type(c_ptr), value :: XYs1d
   type(c_ptr), value :: regions1d
   type(c_ptr), value :: polynomial1d
   type(c_ptr), value :: reference
   type(c_ptr), value :: branching1d
   type(c_ptr), value :: branching3d
   type(c_ptr), value :: unspecified
   type(c_ptr) :: handle
end function MultiplicityCreateConst

!! Create, general
function MultiplicityCreate( &
   constant1d, &
   XYs1d, &
   regions1d, &
   polynomial1d, &
   reference, &
   branching1d, &
   branching3d, &
   unspecified &
) &
      bind(C, name='MultiplicityCreate') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: constant1d
   type(c_ptr), value :: XYs1d
   type(c_ptr), value :: regions1d
   type(c_ptr), value :: polynomial1d
   type(c_ptr), value :: reference
   type(c_ptr), value :: branching1d
   type(c_ptr), value :: branching3d
   type(c_ptr), value :: unspecified
   type(c_ptr) :: handle
end function MultiplicityCreate

!! Assign
subroutine MultiplicityAssign(handleLHS, handleRHS) &
      bind(C, name='MultiplicityAssign')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handleLHS, handleRHS
end subroutine MultiplicityAssign

!! Delete
subroutine MultiplicityDelete(handle) &
      bind(C, name='MultiplicityDelete')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine MultiplicityDelete


!! -----------------------------------------------------------------------------
!! I/O
!! Read, Write, Print
!! Each returns 0 if failure, 1 if success.
!! -----------------------------------------------------------------------------

!! Read from file
function MultiplicityRead(handle, filename, filenameSize) &
      bind(C, name='MultiplicityRead') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function MultiplicityRead

!! Write to file
function MultiplicityWrite(handle, filename, filenameSize) &
      bind(C, name='MultiplicityWrite') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function MultiplicityWrite

!! Print to standard output, in our prettyprinting format
function MultiplicityPrint(handle) &
      bind(C, name='MultiplicityPrint') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function MultiplicityPrint

!! Print to standard output, as XML
function MultiplicityPrintXML(handle) &
      bind(C, name='MultiplicityPrintXML') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function MultiplicityPrintXML

!! Print to standard output, as JSON
function MultiplicityPrintJSON(handle) &
      bind(C, name='MultiplicityPrintJSON') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function MultiplicityPrintJSON


!! -----------------------------------------------------------------------------
!! Child: constant1d
!! -----------------------------------------------------------------------------

!! Has
function MultiplicityConstant1dHas(handle) &
      bind(C, name='MultiplicityConstant1dHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function MultiplicityConstant1dHas

!! Get, const
function MultiplicityConstant1dGetConst(handle) &
      bind(C, name='MultiplicityConstant1dGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function MultiplicityConstant1dGetConst

!! Get
function MultiplicityConstant1dGet(handle) &
      bind(C, name='MultiplicityConstant1dGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function MultiplicityConstant1dGet

!! Set
subroutine MultiplicityConstant1dSet(handle, fieldHandle) &
      bind(C, name='MultiplicityConstant1dSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine MultiplicityConstant1dSet


!! -----------------------------------------------------------------------------
!! Child: XYs1d
!! -----------------------------------------------------------------------------

!! Has
function MultiplicityXYs1dHas(handle) &
      bind(C, name='MultiplicityXYs1dHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function MultiplicityXYs1dHas

!! Get, const
function MultiplicityXYs1dGetConst(handle) &
      bind(C, name='MultiplicityXYs1dGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function MultiplicityXYs1dGetConst

!! Get
function MultiplicityXYs1dGet(handle) &
      bind(C, name='MultiplicityXYs1dGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function MultiplicityXYs1dGet

!! Set
subroutine MultiplicityXYs1dSet(handle, fieldHandle) &
      bind(C, name='MultiplicityXYs1dSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine MultiplicityXYs1dSet


!! -----------------------------------------------------------------------------
!! Child: regions1d
!! -----------------------------------------------------------------------------

!! Has
function MultiplicityRegions1dHas(handle) &
      bind(C, name='MultiplicityRegions1dHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function MultiplicityRegions1dHas

!! Get, const
function MultiplicityRegions1dGetConst(handle) &
      bind(C, name='MultiplicityRegions1dGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function MultiplicityRegions1dGetConst

!! Get
function MultiplicityRegions1dGet(handle) &
      bind(C, name='MultiplicityRegions1dGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function MultiplicityRegions1dGet

!! Set
subroutine MultiplicityRegions1dSet(handle, fieldHandle) &
      bind(C, name='MultiplicityRegions1dSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine MultiplicityRegions1dSet


!! -----------------------------------------------------------------------------
!! Child: polynomial1d
!! -----------------------------------------------------------------------------

!! Has
function MultiplicityPolynomial1dHas(handle) &
      bind(C, name='MultiplicityPolynomial1dHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function MultiplicityPolynomial1dHas

!! Get, const
function MultiplicityPolynomial1dGetConst(handle) &
      bind(C, name='MultiplicityPolynomial1dGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function MultiplicityPolynomial1dGetConst

!! Get
function MultiplicityPolynomial1dGet(handle) &
      bind(C, name='MultiplicityPolynomial1dGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function MultiplicityPolynomial1dGet

!! Set
subroutine MultiplicityPolynomial1dSet(handle, fieldHandle) &
      bind(C, name='MultiplicityPolynomial1dSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine MultiplicityPolynomial1dSet


!! -----------------------------------------------------------------------------
!! Child: reference
!! -----------------------------------------------------------------------------

!! Has
function MultiplicityReferenceHas(handle) &
      bind(C, name='MultiplicityReferenceHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function MultiplicityReferenceHas

!! Get, const
function MultiplicityReferenceGetConst(handle) &
      bind(C, name='MultiplicityReferenceGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function MultiplicityReferenceGetConst

!! Get
function MultiplicityReferenceGet(handle) &
      bind(C, name='MultiplicityReferenceGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function MultiplicityReferenceGet

!! Set
subroutine MultiplicityReferenceSet(handle, fieldHandle) &
      bind(C, name='MultiplicityReferenceSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine MultiplicityReferenceSet


!! -----------------------------------------------------------------------------
!! Child: branching1d
!! -----------------------------------------------------------------------------

!! Has
function MultiplicityBranching1dHas(handle) &
      bind(C, name='MultiplicityBranching1dHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function MultiplicityBranching1dHas

!! Get, const
function MultiplicityBranching1dGetConst(handle) &
      bind(C, name='MultiplicityBranching1dGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function MultiplicityBranching1dGetConst

!! Get
function MultiplicityBranching1dGet(handle) &
      bind(C, name='MultiplicityBranching1dGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function MultiplicityBranching1dGet

!! Set
subroutine MultiplicityBranching1dSet(handle, fieldHandle) &
      bind(C, name='MultiplicityBranching1dSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine MultiplicityBranching1dSet


!! -----------------------------------------------------------------------------
!! Child: branching3d
!! -----------------------------------------------------------------------------

!! Has
function MultiplicityBranching3dHas(handle) &
      bind(C, name='MultiplicityBranching3dHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function MultiplicityBranching3dHas

!! Get, const
function MultiplicityBranching3dGetConst(handle) &
      bind(C, name='MultiplicityBranching3dGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function MultiplicityBranching3dGetConst

!! Get
function MultiplicityBranching3dGet(handle) &
      bind(C, name='MultiplicityBranching3dGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function MultiplicityBranching3dGet

!! Set
subroutine MultiplicityBranching3dSet(handle, fieldHandle) &
      bind(C, name='MultiplicityBranching3dSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine MultiplicityBranching3dSet


!! -----------------------------------------------------------------------------
!! Child: unspecified
!! -----------------------------------------------------------------------------

!! Has
function MultiplicityUnspecifiedHas(handle) &
      bind(C, name='MultiplicityUnspecifiedHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function MultiplicityUnspecifiedHas

!! Get, const
function MultiplicityUnspecifiedGetConst(handle) &
      bind(C, name='MultiplicityUnspecifiedGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function MultiplicityUnspecifiedGetConst

!! Get
function MultiplicityUnspecifiedGet(handle) &
      bind(C, name='MultiplicityUnspecifiedGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function MultiplicityUnspecifiedGet

!! Set
subroutine MultiplicityUnspecifiedSet(handle, fieldHandle) &
      bind(C, name='MultiplicityUnspecifiedSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine MultiplicityUnspecifiedSet


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module generalMultiplicity
